--- a/css/media-query.css
+++ b/css/media-query.css
@@ -8,7 +8,7 @@
 
     section#login {
         width: 80vw;
-
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -22,10 +22,6 @@
         float: right;
         width: 70%;
     }
-
-    div#formulario > p {
-        font-size: 1.1em;
-    }
 }
 
 
@@ -36,6 +32,7 @@
     
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -54,6 +51,7 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
