--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
 
-/* 
+/*
     Paleta de cores
     Verde: #49a09d
     Lilás: #5f2c82
 */
 
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
@@ -29,24 +29,25 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
     background-color: white;
     width: 250px;
     height: 515px;
     border-radius: 20px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.473);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
-    transition: width 0.5s, heigth 0.5s;
+    transform: translate(-50%, -50%);
+    transition: width .3s, height .3s;
     transition-timing-function: ease;
 }
 
 section#login > div#imagem {
     display: block;
     background: #5f2c82 url(../images/tela-fundo.jpg) no-repeat;
-    height: 200px;
     background-size: cover;
+    background-position: left bottom;
+    height: 200px;
 }
 
 section#login > div#formulario {
@@ -54,7 +55,7 @@ section#login > div#formulario {
     padding: 10px;
 }
 
-div#formulario {
+div#formulario > h1 {
     text-align: center;
     margin-bottom: 10px;
 }
@@ -65,16 +66,40 @@ div#formulario > p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
-
 }
 
-div.campo > label{
+div.campo > label {
     display: none;
+}
+
+div.campo > span {
+    color: white;
+    /*background-color: black;*/
+    font-size: 1.9em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: #94cfcd;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-10px);
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
 }
 
 form > input[type=submit] {
@@ -82,7 +107,7 @@ form > input[type=submit] {
     font-size: 1em;
     width: 100%;
     height: 40px;
-    background-color: #49a09d;
+    background-color: #53aaa7;
     color: white;
     border: none;
     border-radius: 5px;
@@ -90,7 +115,7 @@ form > input[type=submit] {
 }
 
 form > input[type=submit]:hover {
-    background-color: #295d5b;
+    background-color: #2d6462;
 }
 
 form > a.botao {
@@ -100,16 +125,16 @@ form > a.botao {
     width: 100%;
     height: 40px;
     padding-top: 5px;
-    margin-top: 7px;
-    color: #295d5b;
+    margin-top: 5px;
     background-color: white;
+    color: #2d6462;
     border: 1px solid #49a09d;
-    border-radius: 5px;
+    border-radius: 7px;
     text-decoration: none;
 }
 
 form > a.botao:hover {
-    background-color: #5cd4d0;
+    background-color: #6cd3cf;
 }
 
 form > a.botao > span {
